# OpenTelevision

./: TELEOP_SYSTEM_DESIGN.md  pyproject.toml  requirements.txt  setup.py
docs/: teleop_ik_review.md
experimenting/: forward_kinematics.ipynb  forward_kinematics.py
scripts/: benchmark_ik.py  pybullet_ik_visualizer.py  stress_test_ik.py  test_ik.py
teleop/: TeleVision.py  ruka_interface.py  teleop_ruka.py
teleop/ik/: README.md  __init__.py  dual_arm_solver.py  losses.py  optimized_solver.py  robot.py  smooth_solver.py  solver.py  utils.py
teleop/utils/: filters.py  scaling.py
tests/: test_joint_limits.py
